examples/experimental/destination-port-matching-tcp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: destination-port-matching-example
spec:
  parentRefs:
  - name: my-mesh
    group: example.io
    kind: Mesh
    port: 8000
  rules:
  - backendRefs:
    - name: my-service
      port: 8080
